<resources>

    <string name="logo">logo</string>
    <string name="a_bank">A Bank</string>
    <string name="sign_up_now">Sign Up now</string>
    <string name="join_users">Join to our users</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="error_phone_prefixes">Only 10|50|51|55|70|77|99|66 prefixes are usable !</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="error_wrong_date">Wrong Date !</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">back_button</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="has_already_account">Has already account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="term_condition">I agree with Terms and Conditions.</string>
    <string name="platinum">Platinum</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="top_up">Top up</string>
    <string name="payment">Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="add_new_card">Add new card</string>
    <string name="color">Color</string>
    <string name="card_type">Card Type</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="visa_debit">Visa Debit</string>
    <string name="card_name">Card Name</string>
    <string name="transfer">Transfer</string>
    <string name="pay_from">Pay from</string>
    <string name="swap">Swap</string>
    <string name="choose_your_card">Choose your card</string>
    <string name="_10">+ 10</string>
    <string name="_20">+ 20</string>
    <string name="_30">+ 30</string>
    <string name="comission">Comission</string>
    <string name="continue_text">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="enroll_to">Enroll To</string>
    <string name="cards">Cards</string>
    <string name="currencies">Currencies</string>
    <string name="currrency">Currrency</string>
    <string name="_1_00_azn">Commission : 1.00 AZN</string>
    <string name="card_details">Card Details</string>
    <string name="save">Save</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expire_date">Expire Date</string>
    <string name="holder_name">Holder Name</string>
    <string name="product_type">Product Type</string>
    <string name="ok">Ok</string>
</resources>