<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".ui.fragment.SignUpFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:contentDescription="@string/back_button"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanova_bold"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/a_bank"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/bg_white_radius_top_70"
        android:fillViewport="false"
        android:paddingTop="30dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/createAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_semibold"
                android:gravity="center"
                android:text="@string/sign_up_now"
                android:textColor="@color/color_primary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/createAccountDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:paddingBottom="10dp"
                android:text="@string/join_users"
                android:textColor="@color/color_secondary_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccountText" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/bg_white_radius_100_border_1"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/proximanova_regular"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:letterSpacing="0.05"
                android:lines="1"
                android:maxLength="30"
                android:padding="10dp"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_secondary_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createAccountDescription" />

            <EditText
                android:id="@+id/surnameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:digits="abcçdeəfgğhxıijkqlmnoöprsştuüvwyzABCÇDEƏFGĞHXIİJKQLMNOÖPRSŞTUÜVWYZ"
                android:layout_marginTop="40dp"
                android:autofillHints="name"
                android:background="@drawable/bg_white_radius_100_border_1"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/proximanova_regular"
                android:hint="@string/hint_surname"
                android:inputType="textPersonName"
                android:letterSpacing="0.05"
                android:lines="1"
                android:maxLength="30"
                android:padding="10dp"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_secondary_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameField" />

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/phoneNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_white_radius_100_border_1"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/proximanova_regular"
                android:hint="@string/hint_phone_number"
                android:inputType="numberSigned"
                android:letterSpacing="0.05"
                android:padding="10dp"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_secondary_light"
                android:textSize="16sp"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surnameField"
                app:mask="+994 (**) *** ** **"
                app:notMaskedSymbol="*"

                />

            <TextView
                android:id="@+id/phoneNumberError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:letterSpacing="0.005"
                android:paddingHorizontal="15dp"
                android:paddingVertical="3dp"
                android:text="@string/error_phone_prefixes"
                android:textColor="@color/light_red"
                android:textSize="11sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/phoneNumberField"
                app:layout_constraintStart_toStartOf="@+id/phoneNumberField"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/birth_day_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_white_radius_100_border_1"
                android:clipToPadding="false"
                android:drawableStart="@drawable/ic_birthday"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="5dp"
                android:elevation="10dp"
                android:fontFamily="@font/proximanova_regular"
                android:hint="@string/hint_birth_date"
                android:inputType="date"
                android:letterSpacing="0.05"
                android:padding="10dp"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_secondary_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberField"
                app:mask="**.**.****"
                app:notMaskedSymbol="*" />

            <View
                android:id="@+id/btnCalendar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/birth_day_field"
                app:layout_constraintEnd_toEndOf="@+id/birth_day_field"
                app:layout_constraintTop_toTopOf="@+id/birth_day_field" />

            <TextView
                android:id="@+id/birthDayError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proximanova_regular"
                android:letterSpacing="0.005"
                android:paddingHorizontal="15dp"
                android:paddingVertical="3dp"
                android:text="@string/error_wrong_date"
                android:textColor="@color/light_red"
                android:textSize="11sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/phoneNumberField"
                app:layout_constraintStart_toStartOf="@+id/phoneNumberField"
                app:layout_constraintTop_toBottomOf="@+id/birth_day_field" />

            <CheckBox
                android:id="@+id/cbTermCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/color_primary_dark"
                android:buttonTint="@color/blue"
                android:fontFamily="@font/proximanova_regular"
                android:letterSpacing="0.005"
                android:text="@string/term_condition"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthDayError" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_white_radius_20"
        android:backgroundTint="@color/color_secondary"
        android:fontFamily="@font/proximanova_semibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>