<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".ui.activity.DashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/clientFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proximanova_semibold"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:textColor="@color/white_700"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Asif Jamilov" />

    <ImageView
        android:id="@+id/notificationImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:textColor="@color/white_700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/clientFullName"
        tools:text="Your card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAddNewCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardName"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/cardName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus" />

            <TextView
                android:id="@+id/addCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/proximanova_regular"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/add_new_card"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <com.github.islamkhsh.CardSliderViewPager
        android:id="@+id/cardViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:auto_slide_time="-1"
        app:cardSlider_indicator="@id/cardIndicator"
        app:cardSlider_otherPagesWidth="24dp"
        app:cardSlider_pageMargin="12dp"
        app:cardSlider_smallAlphaFactor="0.4"
        app:cardSlider_smallScaleFactor="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardName" />


    <com.github.islamkhsh.CardSliderIndicator
        android:id="@+id/cardIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        app:defaultIndicator="@drawable/indicator_default"
        app:indicatorsToShow="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPager"
        app:selectedIndicator="@drawable/indicator_selected" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_secondary"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/cardIndicator">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_send" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/btnSend">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_receive" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnTopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPayment"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/btnSend">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_topup" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/btnSend">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_scan" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/sendText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/send"
        android:textColor="@color/white_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSend"
        app:layout_constraintStart_toStartOf="@+id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/btnSend" />

    <TextView
        android:id="@+id/receiveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/receive"
        android:textColor="@color/white_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnReceive"
        app:layout_constraintStart_toStartOf="@+id/btnReceive"
        app:layout_constraintTop_toBottomOf="@+id/btnReceive" />

    <TextView
        android:id="@+id/topUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/top_up"
        android:textColor="@color/white_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnTopUp"
        app:layout_constraintStart_toStartOf="@+id/btnTopUp"
        app:layout_constraintTop_toBottomOf="@+id/btnTopUp" />

    <TextView
        android:id="@+id/paymentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/payment"
        android:textColor="@color/white_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPayment"
        app:layout_constraintStart_toStartOf="@+id/btnPayment"
        app:layout_constraintTop_toBottomOf="@+id/btnPayment" />


    <TextView
        android:id="@+id/recentActivitiesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/proximanova_medium"
        android:gravity="center_vertical"
        android:letterSpacing="0.1"
        android:text="@string/recent_activities"
        android:textColor="@color/white_700"
        android:textSize="20sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/paymentText" />

    <include
        android:id="@+id/shimmer"
        layout="@layout/shimmer_placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/historyRecycler"
        app:layout_constraintEnd_toEndOf="@+id/historyRecycler"
        app:layout_constraintStart_toStartOf="@+id/historyRecycler"
        app:layout_constraintTop_toTopOf="@+id/historyRecycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:scrollbars="none"
        app:fastScrollVerticalTrackDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/recentActivitiesText"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="10"
        tools:listitem="@layout/item_history" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/cartItemsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="clientFullName,notificationImg,cardName,cardIndicator,cardViewPager,sendText,btnSend,receiveText,btnReceive,topUpText,btnTopUp,paymentText,btnPayment" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

